# proctor_and_ramble

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  config.yaml  pyproject.toml  test_output.txt
backend/: config.py  main.py  prompts.py
backend/agent/: loop.py  prompts.py
backend/engines/: codex_cli_client.py  groq_whisper.py  llm_base.py  mlx_whisper.py  openai_client.py  stt_base.py
backend/engines/llm/: codex_cli_client.py  openai_client.py
backend/engines/stt/: groq_whisper.py  mlx_whisper.py  stt_base.py
backend/engines/tts/: elevenlabs_tts.py  piper_tts.py  player.py  tts_base.py
backend/question/: loader.py
backend/session/: manager.py  models.py
backend/watcher/: file_watcher.py
docs/superpowers/plans/: 2026-05-02-glass-ui-redesign.md  2026-05-02-proctor-and-ramble-v1.md  2026-05-03-agent-loop-chronological-context.md  2026-05-03-question-enrichment.md
docs/superpowers/specs/: 2026-05-02-glass-ui-redesign.md  2026-05-03-agent-loop-chronological-context-design.md  2026-05-03-question-enrichment-design.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ExportButton.tsx  MarkdownText.tsx  ProctorPanel.tsx  QuestionPanel.tsx  Spinner.tsx  Timer.tsx
frontend/src/hooks/: useSession.ts
frontend/src/screens/: Feedback.tsx  (+2 more)
tests/: test_agent_loop.py  test_config.py  test_file_watcher.py  test_main.py  test_models.py  test_openai_client.py  test_question_loader.py  test_session_manager.py  test_stt_base.py  test_tts_engines.py  test_tts_player.py
(+1 files in other folders)
