[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "proctor_and_ramble"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "httpx>=0.27",
    "watchdog>=4.0",
    "sounddevice>=0.4",
    "numpy>=1.26",
    "mlx-whisper>=0.3",
    "groq>=0.9",
    "silero-vad",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "httpx>=0.27",
]
piper = ["piper-tts>=1.2"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
